ic responsive hp adn tablet

--- a/src/assets/css/welcometo.css
+++ b/src/assets/css/welcometo.css
@@ -5,3 +5,11 @@
     4px -2px 0 #f4c66b, 4px 2px 0 #f4c66b, -2px -4px 0 #f4c66b,
     2px -4px 0 #f4c66b, -2px 4px 0 #f4c66b, 2px 4px 0 #f4c66b, 0px 0px 0 #f4c66b;
 }
+
+.ui-ux {
+  text-shadow: -4px -4px 0 #0E5D84, 4px -4px 0 #0E5D84, -4px 4px 0 #0E5D84,
+      4px 4px 0 #0E5D84, -4px 0px 0 #0E5D84, 4px 0px 0 #0E5D84, 0px -4px 0 #0E5D84,
+      0px 4px 0 #0E5D84, -4px -2px 0 #0E5D84, -4px 2px 0 #0E5D84,
+      4px -2px 0 #0E5D84, 4px 2px 0 #0E5D84, -2px -4px 0 #0E5D84,
+      2px -4px 0 #0E5D84, -2px 4px 0 #0E5D84, 2px 4px 0 #0E5D84, 0px 0px 0 #0E5D84;
+}
